--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
                     <ul class='nav nav-pills'>
                         <li role='presentation' class='dropdown'>
                             <%= link_to 'Account', current_user, class: 'dropdown-toggle' %>
-                            <ul class='dropdown-menu' id='account'>
+                            <ul class='dropdown-menu'>
                                 <% unless current_user %>
                                     <li>
                                         <%= link_to 'Sign Up', new_user_registration_path %>
@@ -22,7 +22,7 @@
                                     </li>
                                 <% else %>
                                     <li>
-                                        <%= link_to 'Orders', shopping_cart_path(current_user) %>
+                                        <%= link_to 'Orders', user_orders_path(current_user) %>
                                     </li>
                                     <li>
                                         <%= link_to 'Setting', current_user %>
@@ -35,7 +35,7 @@
                         </li>
                         <li role='presentation' class='dropdown'>
                             <%= link_to 'Help', help_path, class: 'dropdown-toggle' %>
-                            <ul class='dropdown-menu' id='help'>
+                            <ul class='dropdown-menu'>
                                 <li>
                                     <%= link_to 'About Us', about_path %>
                                 </li>
