--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
         <div class='row'>
             <div class='col-md-1'>
                 <ul class='nav nav-pills'>
-                    <%= render 'layouts/navbar_form', objects: Category.all %>
+                    <%= render 'layouts/navbar_form', object: Category %>
                 </ul>
             </div>
         </div>
