--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,6 +6,11 @@
                     <%= render 'layouts/navbar_form', object: Category %>
                 </ul>
             </div>
+            <% if current_user %>
+                <div class='col-md-2 checkout_btn text-right'>
+                    <%= link_to 'Check Out', new_user_charge_path(current_user), class: 'btn btn-default' %>
+                </div>
+            <% end %>
         </div>
     </div>
 </div>
