--- a/app/views/orders/_orders_list.html.erb
+++ b/app/views/orders/_orders_list.html.erb
@@ -8,7 +8,7 @@
                 <h5><%= order.order_items.count %></h5>
             </td>
             <td>
-                <h5><%= item_total_sell(order) %></h5>
+                <h5><%= order.item_total %></h5>
             </td>
             <td>
                 <h5>$ <%= order.order_total %></h5>
