--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -38,13 +38,13 @@
                             </td>
                             <td class='table_title text-left'>
                                 <h5>Title: <%= item.title %></h5>
-                                <p>Status: <%= change_item_status_word(item.status) %>, </p>
+                                <p>Status: <%= @status_in_word[index] %>, </p>
                                 <p>Price: $<%= item.price %>, </p>
                                 <p>Quantity: <%= item.quantity %>, </p>
-                                <p>Sold: <%= item_total_sell(item) %>, </p></br>
+                                <p>Sold: <%= item.total_sold %>, </p></br>
                                 <p>Wish: <%= item.wish_lists.count %>, </p>
                                 <p><%= link_to "Review: #{item.reviews.count}", item_reviews_path(item) %>, </p>
-                                <p>Average Rating: <%= average_rating(item) %>, </p>
+                                <p>Average Rating: <%= item.average_rating %>, </p>
                                 <p>Img Number: <%= item.photos.count %></p>
                                 
                             </td>
