--- a/app/views/layouts/_side_bar.html.erb
+++ b/app/views/layouts/_side_bar.html.erb
@@ -5,7 +5,7 @@
         </div>
         <div class='col-md-12'>
             <table class='table table-bordered top_sale_list'>
-                <% all_items_id_sort_by_sold_number(Item).take(5).each_with_index do |id, index| %>
+                <% Item.top_sale.take(5).each_with_index do |id, index| %>
                     <tr class='item_list'>
                         <td class='item_no'>
                             <%= index + 1 %>
