--- a/app/views/static_pages/mostpopular_items.html.erb
+++ b/app/views/static_pages/mostpopular_items.html.erb
@@ -4,6 +4,6 @@
         <h1 class='text-center'>
             Top Sale
         </h1>
-        <%= render 'static_pages/popular_list_form', items: find_all_objects_by_id(all_items_id_sort_by_sold_number(Item), Item) %>
+        <%= render 'static_pages/popular_list_item', items: Item.top_sale %>
     </div>
 </div>
