--- a/app/views/static_pages/newarrival.js.erb
+++ b/app/views/static_pages/newarrival.js.erb
@@ -1,6 +1,4 @@
-$('#most_popular').hide()
-$('#most_popular_more').hide()
-$('#on_sale').hide()
-$('#on_sale_more').hide()
-$('#new_arrival').show()
-$('#new_arrival_more').show()
+$('#recommend_btn_area').empty();
+$('#recommend_btn_area').append("<%= j link_to 'More', newarrival_items_path, class: 'more_btn', id: 'new_arrival_more' %>");
+$('#recommend_area').empty();
+$('#recommend_area').append("<%= j render 'static_pages/popular_item',id: 'new_arrival', name: 'new_arrival', objects: Item.new_arrived.take(6) %>");
