--- a/app/views/static_pages/onsale.js.erb
+++ b/app/views/static_pages/onsale.js.erb
@@ -1,6 +1,4 @@
-$('#most_popular').hide()
-$('#most_popular_more').hide()
-$('#on_sale').show()
-$('#on_sale_more').show()
-$('#new_arrival').hide()
-$('#new_arrival_more').hide()
+$('#recommend_btn_area').empty();
+$('#recommend_btn_area').append("<%= j link_to 'More', '#', class: 'more_btn', id: 'on_sale_more' %>");
+$('#recommend_area').empty();
+$('#recommend_area').append("<%= j render 'static_pages/popular_item',id: 'on_sale', name: 'on_sale', objects: Item.all.take(6) %>");
