--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -40,7 +40,7 @@
         <div id='home_category_item'>
             <%= render 'static_pages/home_category', class_name: @categories %>
         </div>
-        <div id='infinite-scrolling'>
+        <div class='infinite-scrolling'>
             <%= paginate @categories %>
         </div>
     </div>
