--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -163,6 +163,10 @@
         border: 1px solid black;
         margin: 16px;
         
+        .img {
+            margin-top: 10px;
+        }
+        
         .item_title {
             height: 15px;
             overflow: hidden;
