--- a/app/views/static_pages/newarrival_items.html.erb
+++ b/app/views/static_pages/newarrival_items.html.erb
@@ -4,6 +4,11 @@
         <h1 class='text-center'>
             New Arrival
         </h1>
-        <%= render 'static_pages/popular_list_item', items: Item.new_arrived %>
+        <div id='new_arrival_item_list'>
+            <%= render 'static_pages/popular_list_item', items: @items %>
+        </div>
+        <div class='infinite-scrolling'>
+            <%= paginate @items %>
+        </div>
     </div>
 </div>
