--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
 <div class='text-center'>
     <div class='row'>
         <div class='col-md-10 col-md-offset-1'>
-            <h1><%= current_user.username %>'s Products List</h1>
+            <h1>All Products List</h1>
         </div>
     </div>
     <div class='row'>
